--- a/python_app/experimentations.ipynb
+++ b/python_app/experimentations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
        "4                2 weeks          5.0  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
        "Name: 16, dtype: object"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
        "4                2 weeks          5.0  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +400,7 @@
        "4                2 weeks          5.0  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +580,7 @@
        "[113 rows x 6 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -843,7 +843,7 @@
        "19    2023-06-20                2 weeks          2.0  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -854,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -864,7 +864,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -877,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -981,7 +981,7 @@
        "4                2 weeks          5.0          49  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1004,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -1108,7 +1108,7 @@
        "4                2 weeks          5.0             49  "
       ]
      },
-     "execution_count": 64,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1121,7 +1121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -1225,7 +1225,7 @@
        "9                2 weeks          2.0              4  "
       ]
      },
-     "execution_count": 65,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1239,7 +1239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -1248,7 +1248,7 @@
        "12"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1260,7 +1260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -1285,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -1383,7 +1383,7 @@
        "8          9.0         Emory Ted"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1391,14 +1391,14 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "customers = pd.read_csv('Data/03_Library SystemCustomers.csv')\n",
+    "customers = pd.read_csv('data/03_Library SystemCustomers.csv')\n",
     "print(f\"Customers csv has {len(customers)} rows.\")\n",
     "customers.head(n=9)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1407,7 +1407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -1498,7 +1498,7 @@
        "8          9.0         Emory Ted"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1510,7 +1510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -1529,13 +1529,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Outputing cleaned files\n",
-    "customers_clean.to_csv('customers_clean.csv')\n",
-    "valid_loan_data.to_csv('load_data_cleaned.csv')"
+    "customers_clean.to_csv('data/customers_clean.csv')\n",
+    "valid_loan_data.to_csv('data/load_data_cleaned.csv')"
    ]
   },
   {
@@ -1547,58 +1547,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Requirement already satisfied: pandas in c:\\users\\admin\\appdata\\roaming\\python\\python312\\site-packages (2.2.3)\n",
-      "Collecting sqlalchemy\n",
-      "  Downloading SQLAlchemy-2.0.38-cp312-cp312-win_amd64.whl.metadata (9.9 kB)\n",
-      "Collecting pyodbc\n",
-      "  Downloading pyodbc-5.2.0-cp312-cp312-win_amd64.whl.metadata (2.8 kB)\n",
-      "Requirement already satisfied: numpy>=1.26.0 in c:\\users\\admin\\appdata\\roaming\\python\\python312\\site-packages (from pandas) (2.2.3)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\program files\\python312\\lib\\site-packages (from pandas) (2.9.0.post0)\n",
-      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\admin\\appdata\\roaming\\python\\python312\\site-packages (from pandas) (2025.1)\n",
-      "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\admin\\appdata\\roaming\\python\\python312\\site-packages (from pandas) (2025.1)\n",
-      "Collecting greenlet!=0.4.17 (from sqlalchemy)\n",
-      "  Downloading greenlet-3.1.1-cp312-cp312-win_amd64.whl.metadata (3.9 kB)\n",
-      "Collecting typing-extensions>=4.6.0 (from sqlalchemy)\n",
-      "  Downloading typing_extensions-4.12.2-py3-none-any.whl.metadata (3.0 kB)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\program files\\python312\\lib\\site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n",
-      "Downloading SQLAlchemy-2.0.38-cp312-cp312-win_amd64.whl (2.1 MB)\n",
-      "   ---------------------------------------- 0.0/2.1 MB ? eta -:--:--\n",
-      "    --------------------------------------- 0.0/2.1 MB 660.6 kB/s eta 0:00:04\n",
-      "   --- ------------------------------------ 0.2/2.1 MB 2.5 MB/s eta 0:00:01\n",
-      "   ------------------ --------------------- 1.0/2.1 MB 6.8 MB/s eta 0:00:01\n",
-      "   ---------------------------------- ----- 1.8/2.1 MB 9.6 MB/s eta 0:00:01\n",
-      "   ---------------------------------------- 2.1/2.1 MB 9.5 MB/s eta 0:00:00\n",
-      "Downloading pyodbc-5.2.0-cp312-cp312-win_amd64.whl (69 kB)\n",
-      "   ---------------------------------------- 0.0/69.5 kB ? eta -:--:--\n",
-      "   ---------------------------------------- 69.5/69.5 kB ? eta 0:00:00\n",
-      "Downloading greenlet-3.1.1-cp312-cp312-win_amd64.whl (299 kB)\n",
-      "   ---------------------------------------- 0.0/299.7 kB ? eta -:--:--\n",
-      "   --------------------------------------- 299.7/299.7 kB 19.3 MB/s eta 0:00:00\n",
-      "Downloading typing_extensions-4.12.2-py3-none-any.whl (37 kB)\n",
-      "Installing collected packages: typing-extensions, pyodbc, greenlet, sqlalchemy\n",
-      "Successfully installed greenlet-3.1.1 pyodbc-5.2.0 sqlalchemy-2.0.38 typing-extensions-4.12.2\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[notice] A new release of pip is available: 24.0 -> 25.0.1\n",
-      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+      "Requirement already satisfied: pandas in c:\\programdata\\anaconda3\\lib\\site-packages (2.1.4)\n",
+      "Requirement already satisfied: sqlalchemy in c:\\programdata\\anaconda3\\lib\\site-packages (2.0.25)\n",
+      "Requirement already satisfied: pyodbc in c:\\programdata\\anaconda3\\lib\\site-packages (5.0.1)\n",
+      "Requirement already satisfied: numpy<2,>=1.23.2 in c:\\programdata\\anaconda3\\lib\\site-packages (from pandas) (1.26.4)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\programdata\\anaconda3\\lib\\site-packages (from pandas) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\programdata\\anaconda3\\lib\\site-packages (from pandas) (2023.3.post1)\n",
+      "Requirement already satisfied: tzdata>=2022.1 in c:\\programdata\\anaconda3\\lib\\site-packages (from pandas) (2023.3)\n",
+      "Requirement already satisfied: typing-extensions>=4.6.0 in c:\\programdata\\anaconda3\\lib\\site-packages (from sqlalchemy) (4.9.0)\n",
+      "Requirement already satisfied: greenlet!=0.4.17 in c:\\programdata\\anaconda3\\lib\\site-packages (from sqlalchemy) (3.0.1)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\programdata\\anaconda3\\lib\\site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n"
      ]
     }
    ],
    "source": [
-    "!pip install pandas sqlalchemy pyodbc\n"
+    "#!pip install pandas sqlalchemy pyodbc\n"
    ]
   },
   {
@@ -1612,7 +1582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -1642,7 +1612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1651,8 +1621,8 @@
     "# Define the connection string to your MS SQL Server\n",
     "server = 'localhost'  \n",
     "database = 'DE5_Module5'\n",
-    "username = 'python_app'\n",
-    "password = 'password'\n",
+    "#username = 'python_app'\n",
+    "#password = 'password'\n",
     "\n",
     "# Create the connection string with Windows Authentication\n",
     "connection_string = f'mssql+pyodbc://@{server}/{database}?trusted_connection=yes&driver=ODBC+Driver+17+for+SQL+Server'\n",
@@ -1664,7 +1634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -1673,20 +1643,20 @@
        "12"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Write the DataFrame to SQL Server\n",
-    "customers_clean.to_sql('customers_bronz', con=engine, if_exists='replace', index=False)\n",
-    "valid_loan_data.to_sql('loans_bonz', con=engine, if_exists='replace', index=False)\n"
+    "customers_clean.to_sql('customers_bronze', con=engine, if_exists='replace', index=False)\n",
+    "valid_loan_data.to_sql('loans_bonze', con=engine, if_exists='replace', index=False)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -1695,7 +1665,7 @@
        "1"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1732,14 +1702,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from app_refactored import fileLoader\n",
-    "\n",
-    "fileLoader('data/newFile')\n",
-    "\n"
+    "def myFirstFunction():\n",
+    "    print(\"hello!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello!\n"
+     ]
+    }
+   ],
+   "source": [
+    "myFirstFunction()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mySecondFunction(age, name):\n",
+    "    print(f\"Hi {name}, in 10 years you will be {age+10}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi Nirosh, in 10 years you will be 40\n"
+     ]
+    }
+   ],
+   "source": [
+    "mySecondFunction(age=30, name=\"Nirosh\")"
    ]
   }
  ],
